# peony

./: .gitignore  MANIFEST.in  README.md  caddy_settings  pyproject.toml  vpn_settings  vpns-backup.py  vpns-caddy.py  vpns-vpn.py  vpns_docker_manager.py  vpns_utils.py
src/peony/: backup.py  caddy.py  utils.py  vpn.py
src/peony/templates/caddy/: Caddyfile  docker-compose.yaml  vpn-select.html
src/peony/templates/vpns/: easy-rsa.vars  server.conf
templates/caddy/: Caddyfile  docker-compose.yaml  vpn-select.html
templates/vpns/: client.conf  docker-compose.yaml  docker-compose.yml  easy-rsa.vars  server.conf
