[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thewiw-peony-openvpn"
version = "0.1.3"
description = "A VPN management tool"
authors = [{name = "The WiW", email = "contact@thewiw.com"}]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docker>=7.1.0",
]

[project.scripts]
peony-vpn = "peony.vpn:main"
peony-caddy = "peony.caddy:main"
peony-backup = "peony.backup:main"

[tool.setuptools.package-data]
peony = [
    "caddy_settings",
    "vpn_settings"
]

[project.urls]
Documentation = "https://docs.google.com/document/d/1sQOw4j7yWPoopRipE6pQS8Y7TJhqU4xim82za_FugUA/"
Source = "https://example.com"